--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,10 @@
 
         <junit.version>4.13.2</junit.version>
         <commons-lang3.version>3.12.0</commons-lang3.version>
+        <mysql-connector-java.version>8.0.29</mysql-connector-java.version>
+        <HikariCP.version>4.0.3</HikariCP.version>
+        <jackson.version>2.13.2</jackson.version>
+        <dbutils.version>1.7</dbutils.version>
     </properties>
 
 
@@ -40,6 +44,31 @@
                 <artifactId>commons-lang3</artifactId>
                 <version>${commons-lang3.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql-connector-java.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.zaxxer</groupId>
+                <artifactId>HikariCP</artifactId>
+                <version>${HikariCP.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.fasterxml.jackson.dataformat</groupId>
+                <artifactId>jackson-dataformat-yaml</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>commons-dbutils</groupId>
+                <artifactId>commons-dbutils</artifactId>
+                <version>${dbutils.version}</version>
+            </dependency>
+
 
         </dependencies>
     </dependencyManagement>
